--- a/package.json
+++ b/package.json
@@ -40,13 +40,15 @@
     "react-native": "0.74.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "^1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "^15.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
