Add logo.png and update configuration files

--- a/app.json
+++ b/app.json
@@ -4,11 +4,11 @@
     "slug": "Chepeat",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/logo.png",
+    "icon": "/assets/images/logo.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
-      "image": "./assets/images/logo.png",
+      "image": "/assets/images/logo.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
@@ -24,7 +24,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": ".assets/images/logo.png",
+        "foregroundImage": "/assets/images/logo.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.jpablito.Chepeat",
