CE Sprint-4 Modificaciones CRUD

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "CE-Chepeat",
+    "name": "Chepeat",
     "slug": "CE-Chepeat-Movil",
     "version": "1.0.0",
     "orientation": "portrait",
