--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Chepeat",
     "slug": "Chepeat",
     "version": "1.0.0",
+    "newArchEnabled": true,
     "orientation": "portrait",
     "icon": "./assets/images/logo.png",
     "scheme": "myapp",
