--- a/package.json
+++ b/package.json
@@ -16,49 +16,50 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@react-native-async-storage/async-storage": "^1.23.1",
-    "@react-native-community/datetimepicker": "^8.0.1",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli-server-api": "^15.1.2",
+    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-picker/picker": "2.9.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "~51.0.38",
-    "expo-checkbox": "^3.0.0",
-    "expo-constants": "~16.0.2",
-    "expo-font": "~12.0.9",
-    "expo-image-picker": "~15.0.7",
-    "expo-linking": "~6.3.1",
-    "expo-location": "^17.0.1",
-    "expo-router": "~3.5.23",
-    "expo-secure-store": "^13.0.2",
-    "expo-splash-screen": "~0.27.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "expo-web-browser": "~13.0.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.74.5",
+    "expo": "^52.0.0",
+    "expo-checkbox": "~4.0.0",
+    "expo-constants": "~17.0.3",
+    "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.1",
+    "expo-linking": "~7.0.2",
+    "expo-location": "~18.0.1",
+    "expo-router": "~4.0.5",
+    "expo-secure-store": "~14.0.0",
+    "expo-splash-screen": "~0.29.9",
+    "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "~4.0.2",
+    "expo-web-browser": "~14.0.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-native": "0.76.1",
     "react-native-elements": "^3.4.3",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-get-random-values": "^1.11.0",
-    "react-native-maps": "^1.14.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
+    "react-native-gesture-handler": "~2.20.2",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-maps": "1.18.0",
+    "react-native-reanimated": "~3.16.1",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.0.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
-    "react-native-svg": "^15.2.0",
-    "react-native-web": "~0.19.10",
+    "react-native-svg": "15.8.0",
+    "react-native-web": "~0.19.13",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
-    "jest": "^29.2.1",
-    "jest-expo": "~51.0.3",
+    "jest": "~29.7.0",
+    "jest-expo": "~52.0.1",
     "react-test-renderer": "18.2.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.3.3"
   },
   "private": true
 }
