--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
