--- a/package.json
+++ b/package.json
@@ -22,23 +22,26 @@
     "@react-navigation/native": "^7.0.2",
     "@react-navigation/stack": "^7.0.0",
     "axios": "^1.7.7",
-    "expo": "^52.0.0",
+    "base-64": "^1.0.0",
+    "expo": "~52.0.11",
     "expo-checkbox": "~4.0.0",
     "expo-constants": "~17.0.3",
     "expo-font": "~13.0.1",
-    "expo-image-picker": "~16.0.1",
-    "expo-linking": "~7.0.2",
-    "expo-location": "~18.0.1",
-    "expo-notifications": "~0.29.7",
-    "expo-router": "~4.0.5",
+    "expo-image-picker": "~16.0.3",
+    "expo-linking": "~7.0.3",
+    "expo-location": "~18.0.2",
+    "expo-notifications": "~0.29.8",
+    "expo-router": "^4.0.9",
     "expo-secure-store": "~14.0.0",
-    "expo-splash-screen": "~0.29.9",
+    "expo-sharing": "~13.0.0",
+    "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.2",
+    "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "jest-expo": "~52.0.2",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.1",
+    "react-native": "0.76.3",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
@@ -46,7 +49,7 @@
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "^4.0.0",
+    "react-native-screens": "~4.1.0",
     "react-native-snap-carousel": "^4.0.0-beta.6",
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
@@ -56,6 +59,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@react-native-community/cli-server-api": "^15.0.1",
+    "@types/base-64": "^1.0.2",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.0.7",
